# eQuimageGtk

./: .gitignore  README.md  pyproject.toml  setversion
src/eQuimageGtk/: __init__.py  eQuimageGtk.py
src/eQuimageGtk/gui/: base.py  editors.py  lightcurve.py  logs.py  luma.py  mainwindow.py  menus.py  settings.py  statistics.py  toolmanager.py
src/eQuimageGtk/gui/gtk/: customwidgets.py  filechoosers.py  keyboard.py  signals.py  utils.py
src/eQuimageGtk/gui/misc/: imagechooser.py  utils.py
src/eQuimageGtk/gui/tools/: addframe.py  arcsinh.py  bilateral.py  blackpoint.py  blend.py  butterworth.py  clahe.py  colorbalance.py  colornoise.py  colorsaturation.py  gaussian.py  ghscolorsat.py  grayscale.py  hotpixels.py  hyperbolic.py  midtone.py  nlmeans.py  pixelmath.py  resample.py  stretch.py  switch.py  thresholdmask.py  totalvariation.py  unsharp.py  wavelets.py
src/eQuimageGtk/imageprocessing/: Unistellar.py  colors.py  defs.py  imageprocessing.py  pixelmath.py  stretchfunctions.py  utils.py
